--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -16,18 +16,27 @@
             return "scissors";
         }
     }
+    let winCount = 0;
+    let loseCount = 0;
     function playRound(playerSelection, computerSelection) {
-        return playerSelection.toLowerCase();
+        computerSelection = computerPlay();
+        playerSelection = prompt("Choose: rock, paper, scissors:","");
+        playerSelection.toLowerCase();
         if (playerSelection === "rock" && computerSelection === "paper") {
-            return "You lose! Paper beats rock!";
+            return "Paper beats rock!";
+            loseCount + 1;
         } else if (playerSelection === "paper" && computerSelection === "rock") {
-            return "You win! Paper beats rock!";
+            return "Paper beats rock!";
+            winCount + 1;
         } else if (playerSelection === "scissors" && computerSelection === "rock") {
-            return "You lose! Rock beats scissors!";
+            return "Rock beats scissors!";
+            loseCount + 1;
         } else if (playerSelection === "rock" && computerSelection === "scissors") {
-            return "You win! Rock beats scissors!";
+            return "Rock beats scissors!";
+            winCount + 1;
         } else if (playerSelection === "paper" && computerSelection === "scissors") {
-            return "You lose! Scissors beats paper!";
+            return "Scissors beats paper!";
+            loseCount + 1;
         } else if (playerSelection === "paper" && computerSelection === "paper") {
             return "It's a tie!";
         } else if (playerSelection === "scissors" && computerSelection === "scissors") {
@@ -35,18 +44,19 @@
         } else if (playerSelection === "rock" && computerSelection === "rock") {
             return "It's a tie!";
         } else if (playerSelection === "scissors" && computerSelection === "paper") {
-            return "You win! Scissors beats paper!";
+            return "Scissors beats paper!";
+            winCount + 1;
         } else {
             return "I don't understand that. Did you spell it right?";
         }
       }
-    let computerSelection = computerPlay();
-    let playerSelection = window.prompt("Choose: rock, paper, scissors:");
     function game() {
         for (i=0; i<5; i++)
-        playRound()
+        console.log(playRound());
     }
     console.log(game())
+    console.log(winCount)
+    console.log(loseCount)
   </script>
 </body>
 </html>
