Added more smileys.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         for (i=0; i<5; i++)
         playRound();
         if (loseCount < winCount) {
-          alert("You've beaten the computer!   (づ｡◕‿‿◕｡)づ");
+          alert("You've beaten the computer!   乁༼☯‿☯✿༽ㄏ");
         } else if (loseCount == winCount) {
-          alert("You couldn't beat the computer this time. It's a tie.   (づ｡◕‿‿◕｡)づ")
+          alert("You couldn't beat the computer this time. It's a tie.   (ﾉ≧∇≦)ﾉ ﾐ ┻━┻")
         } else if (loseCount > winCount) {
-          alert("The computer has beaten you!   (づ｡◕‿‿◕｡)づ")
+          alert("The computer has beaten you!   (┛❍ᴥ❍)┛彡┻━┻")
         }
     }
     /* function ending() {
